# megadrive-palette

./: megadrive-palette.cabal
Sega/MegaDrive/: Palette.hs
